--- a/index.html
+++ b/index.html
@@ -6,11 +6,13 @@
 <head>
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-  <title></title>
-  <meta name="description" content="">
+  <title>History Near Me | historynear.me</title>
+  <meta name="description" content="Find history near you.">
 
-  <meta name="viewport" content="width=device-width">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="css/style.css">
+  <link rel="stylesheet" href="libs/bootstrap/css/bootstrap.min.css">
+  <link rel="stylesheet" href="libs/bootstrap/css/bootstrap-responsive.min.css">
 
   <script src="js/libs/modernizr-2.5.3.min.js"></script>
 </head>
@@ -29,6 +31,7 @@
   <!-- scripts -->
   <script src="//ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"></script>
   <script>window.jQuery || document.write('<script src="js/libs/jquery-1.7.1.min.js"><\/script>')</script>
+  <script src="libs/bootstrap/js/bootstrap.min.js"></script>
   <script src="js/plugins.js"></script>
 
   <script>
