--- a/index.html
+++ b/index.html
@@ -13,6 +13,11 @@
   <link rel="stylesheet" href="css/style.css">
   <link rel="stylesheet" href="libs/bootstrap/css/bootstrap.min.css">
   <link rel="stylesheet" href="libs/bootstrap/css/bootstrap-responsive.min.css">
+  <link rel="stylesheet" href="http://code.leafletjs.com/leaflet-0.3.1/leaflet.css" />
+  <!--[if lte IE 8]>
+    <link rel="stylesheet" href="http://code.leafletjs.com/leaflet-0.3.1/leaflet.ie.css" />
+  <![endif]-->
+  <link rel="stylesheet" href="css/history.css">
 
   <script src="js/libs/modernizr-2.5.3.min.js"></script>
 </head>
@@ -66,7 +71,9 @@
   <script src="//ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"></script>
   <script>window.jQuery || document.write('<script src="js/libs/jquery-1.7.1.min.js"><\/script>')</script>
   <script src="libs/bootstrap/js/bootstrap.min.js"></script>
+  <script src="http://code.leafletjs.com/leaflet-0.3.1/leaflet.js"></script>
   <script src="js/plugins.js"></script>
+  <script src="js/history-map.js"></script>
 
   <script>
     var _gaq=[['_setAccount','UA-30722571-1'],['_trackPageview']];
