--- a/index.html
+++ b/index.html
@@ -54,6 +54,13 @@
         <div class="page-header">
           <h1>HistoryNear.me</h1>
         </div>
+        
+        <form class="well form-inline">
+          <label>Search address</label>
+          <input type="text" class="span3" placeholder="Enter address">
+          <button type="submit" class="btn"><i class="icon-search"></i></button>
+          <button type="submit" class="btn geolocate-user"><i class="icon-geolocate"></i></button>
+        </form>
       </div>
       
       <div class="span8">
