Starting to hook up routing.

--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
   </div>
   
   <footer>
-
+    <p>Directions Courtesy of <a href="http://www.mapquest.com/" target="_blank">MapQuest</a> <img src="http://developer.mapquest.com/content/osm/mq_logo.png"></p>
   </footer>
 
   <!-- scripts -->
