Lots of interface updates.

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <title>History Near Me | historynear.me</title>
   <meta name="description" content="Find history near you.">
 
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
   <link rel="stylesheet" href="css/style.css">
   <link rel="stylesheet" href="libs/bootstrap/css/bootstrap.min.css">
   <link rel="stylesheet" href="libs/bootstrap/css/bootstrap-responsive.min.css">
@@ -46,7 +46,7 @@
             </button>
           </form>
         
-          <ul class="nav">
+          <ul class="nav pull-right">
             <li class="">
               <a href="#" data-toggle="modal" href="#modal-about" data-target="#modal-about" class="about-content">About</a>
             </li>
@@ -58,7 +58,7 @@
   
   <div id="history-map"></div>
   
-  <div class="modal hide fade" id="modal-about">
+  <div class="modal hide fade in" id="modal-about">
     <div class="modal-header">
       <a class="close" data-dismiss="modal">×</a>
       <h3>About HistoryNear.me</h3>
