Lots of small fixes.

--- a/index.html
+++ b/index.html
@@ -37,12 +37,12 @@
         
         <div class="nav-collapse collapse">
           <form class="navbar-form pull-left">
-            <button type="submit" class="btn geolocate-user btn-success" title="Use your current location">
-              <i class="icon-geolocate"></i>
-            </button>
             <input type="text" class="span2 geocode-value" placeholder="Enter address">
             <button type="submit" class="btn geocode-string" title="Search for an address or geographical feature">
               <i class="icon-search"></i>
+            </button>
+            <button type="submit" class="btn geolocate-user btn-success" title="Use your current location">
+              <i class="icon-geolocate"></i>
             </button>
           </form>
         
@@ -70,7 +70,7 @@
       <h4>How</h4>
       <p>Use the <i class="icon-geolocate"></i> geo-locate button and we'll try to use your current location and find history near you.  Otherwise, use the search form <i class="icon-search"></i> and find history near a specific address.</p>
       <h4>Technology</h4>
-      <p>Map imagery from <a href="http://mapbox.com">Mapbox</a>; Map data &copy; OpenStreetMap contributors, CC-BY-SA; Directions courtesy of <a href="http://www.mapquest.com/" target="_blank">MapQuest</a> <img src="http://developer.mapquest.com/content/osm/mq_logo.png">; Maps powered by <a href="http://leaflet.cloudmade.com/">Leaflet</a>; Interface styling based from <a href="http://twitter.github.com/bootstrap/">Bootstrap</a>; Icons provided by <a href="http://mapicons.nicolasmollet.com/">map icons</a>.</p>
+      <p>Map imagery from <a href="http://mapbox.com">Mapbox</a>; Map data &copy; OpenStreetMap contributors, CC-BY-SA; Directions courtesy of <a href="http://www.mapquest.com/" target="_blank">MapQuest</a> <img src="http://developer.mapquest.com/content/osm/mq_logo.png">; Maps powered by <a href="http://leaflet.cloudmade.com/">Leaflet</a>; Interface styling based from <a href="http://twitter.github.com/bootstrap/">Bootstrap</a>; Icons provided by <a href="http://mapicons.nicolasmollet.com/">map icons</a>; Database hosting by <a href="https://cartodb.com/">CartoDB</a>.  Get the code on <a href="https://github.com/zzolo/historynear.me">Github</a>.</p>
       <h4>Data</h4>
       <p>This application is powered by <a href="http://sdappschallenge.com/details/data">open data provided by the City of San Diego</a>.</p>
     </div>
