Added loading and started on walking directions.

--- a/index.html
+++ b/index.html
@@ -47,6 +47,7 @@
           </form>
         
           <ul class="nav pull-right">
+            <li class=""><p class="loading-placeholder"></p></li>
             <li class="">
               <a href="#" data-toggle="modal" href="#modal-about" data-target="#modal-about" class="about-content">About</a>
             </li>
