Making the about text a bit nicer.

--- a/index.html
+++ b/index.html
@@ -68,8 +68,14 @@
       <p>Welcome to <strong>HistoryNear.me</strong>, a site to help you find a little bit of history
       near by.  We are still in beta testing right now and are only utilizing data around San Diego,
       California.  If you have any questions or comments, leave them <a href="https://github.com/zzolo/historynear.me/issues">here</a>.</p>
+      
       <h4>How</h4>
-      <p>Use the <i class="icon-geolocate"></i> geo-locate button and we'll try to use your current location and find history near you.  Otherwise, use the search form <i class="icon-search"></i> and find history near a specific address.</p>
+      <ol>
+        <li>Use the <i class="icon-geolocate"></i> geo-locate button and we'll try to use your current location, or use the address search form <i class="icon-search"></i> to create a starting point.</li>
+        <li>Internet magic <i class="icon-gift"></i> will happen and we'll try to find the closest bit of history to you.</li>
+        <li>Utilize the walking directions <i class="icon-walk"></i> to start exploring.</li>
+      </ol>
+      
       <h4>Technology</h4>
       <p>Map imagery from <a href="http://mapbox.com">Mapbox</a>; Map data &copy; OpenStreetMap contributors, CC-BY-SA; Directions courtesy of <a href="http://www.mapquest.com/" target="_blank">MapQuest</a> <img src="http://developer.mapquest.com/content/osm/mq_logo.png">; Maps powered by <a href="http://leaflet.cloudmade.com/">Leaflet</a>; Interface styling based from <a href="http://twitter.github.com/bootstrap/">Bootstrap</a>; Icons provided by <a href="http://mapicons.nicolasmollet.com/">map icons</a>; Database hosting by <a href="https://cartodb.com/">CartoDB</a>.  Get the code on <a href="https://github.com/zzolo/historynear.me">Github</a>.</p>
       <h4>Data</h4>
