Adding leaflet locally and adding example link.

--- a/index.html
+++ b/index.html
@@ -13,9 +13,9 @@
   <link rel="stylesheet" href="css/style.css">
   <link rel="stylesheet" href="libs/bootstrap/css/bootstrap.min.css">
   <link rel="stylesheet" href="libs/bootstrap/css/bootstrap-responsive.min.css">
-  <link rel="stylesheet" href="http://code.leafletjs.com/leaflet-0.3.1/leaflet.css" />
+  <link rel="stylesheet" href="libs/leaflet-0.3.1/leaflet.css" />
   <!--[if lte IE 8]>
-    <link rel="stylesheet" href="http://code.leafletjs.com/leaflet-0.3.1/leaflet.ie.css" />
+    <link rel="stylesheet" href="libs/leaflet-0.3.1/leaflet.ie.css" />
   <![endif]-->
   <link rel="stylesheet" href="css/history.css">
 
@@ -67,7 +67,7 @@
     <div class="modal-body">
       <p>Welcome to <strong>HistoryNear.me</strong>, a site to help you find a little bit of history
       near by.  We are still in beta testing right now and are only utilizing data around San Diego,
-      California.  If you have any questions or comments, leave them <a href="https://github.com/zzolo/historynear.me/issues">here</a>.</p>
+      California.  If you have any questions or comments, leave them <a href="https://github.com/zzolo/historynear.me/issues">here</a>.  Not in San Diego, try the <a href="#" class="example-link" data-example="San Diego CA 92101">downtown example.</a></p>
       
       <h4>How</h4>
       <ol>
@@ -88,7 +88,7 @@
   <script src="//ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"></script>
   <script>window.jQuery || document.write('<script src="js/libs/jquery-1.7.1.min.js"><\/script>')</script>
   <script src="libs/bootstrap/js/bootstrap.min.js"></script>
-  <script src="http://code.leafletjs.com/leaflet-0.3.1/leaflet.js"></script>
+  <script src="libs/leaflet-0.3.1/leaflet.js"></script>
   <script src="js/plugins.js"></script>
   <script src="js/history-map.js"></script>
   <script src="js/interface.js"></script>
